--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
+    <h1>I am Anthony</h1>
     <div id="plot"></div>
     <script src="plots.js"></script>
 </body>
